# llm-cache-privacy

./: .env.example  .gitignore  CS281_Milestone_Report.md  README.md  pyproject.toml  results.md
.claude/agent-memory/gcp-vm-benchmark-runner/: MEMORY.md  deployment-docker.md  gcp-vm-instance.md
.claude/agents/: gcp-vm-benchmark-runner.md
configs/: baseline.yaml
results/: background_metrics.json  background_rate_stats.json  background_raw.jsonl  baseline_metrics.json  baseline_raw.jsonl  crossover.json  eviction_summary.json  eviction_sweep_raw.jsonl  length_sweep_raw.jsonl  popularity_raw.jsonl  popularity_summary.json
scripts/: launch_server.sh  run_phase4_and_sweep.sh  setup_vm.sh
src/kvleak/: __init__.py  background.py  client.py  config.py  server.py
src/kvleak/analysis/: background_robustness.py  crossover.py  eviction.py  metrics.py  plots.py  popularity.py
src/kvleak/data/: lmsys.py  long_prefixes.py  medqa.py  tokenize_utils.py
src/kvleak/experiments/: background_baseline.py  baseline.py  eviction_sweep.py  length_sweep.py  popularity.py
tests/: test_data.py  test_experiments_analysis.py  test_metrics.py  test_popularity.py
