[project]
name = "kvleak"
version = "0.1.0"
description = "KV-cache timing side-channel attack on SGLang prefix caching (CS281)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "datasets>=2.18",
    "transformers>=4.43,<4.47",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

# NOTE: SGLang runs in Docker (lmsysorg/sglang image), NOT as a Python dep.
# The attack client/data/analysis code only needs the base deps above and talks
# to the server over HTTP. There is no GPU/torch dependency here — the same
# `uv sync` works on the Mac and on the VM. See scripts/launch_server.sh.

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kvleak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
